--- a/myTails_Front/eas.json
+++ b/myTails_Front/eas.json
@@ -1,11 +1,21 @@
 {
-    "build": {
-      "development": {
-        "workflow": "managed"
-      },
-      "production": {
-        "workflow": "managed"
-      }
+  "cli": {
+    "version": ">= 14.5.0",
+    "appVersionSource": "remote"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {
+      "autoIncrement": true
     }
+  },
+  "submit": {
+    "production": {}
   }
-  
+}
