Enhance account requirements to meet industry standards

--- a/Front/tsconfig.json
+++ b/Front/tsconfig.json
@@ -6,7 +6,10 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "jsx": "react-jsx" // For React 17+ and TypeScript 4.1+
+    // or
+    // "jsx": "react" // For older versions of React
   },
   "include": [
     "**/*.ts",
