--- a/Front/package.json
+++ b/Front/package.json
@@ -23,12 +23,14 @@
     "@react-navigation/stack": "^7.1.1",
     "@types/react-native": "^0.72.8",
     "expo": "~52.0.27",
+    "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
+    "expo-random": "^14.0.1",
     "expo-router": "^4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
