--- a/App/package.json
+++ b/App/package.json
@@ -22,10 +22,12 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "base-64": "^1.0.0",
     "expo": "~54.0.0",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
+    "expo-device": "^8.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
@@ -41,6 +43,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-ble-plx": "^3.5.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-maps": "1.20.1",
