--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "expo-linear-gradient": "^14.0.2"
+    "base-64": "^1.0.0",
+    "expo-device": "~7.0.3",
+    "expo-linear-gradient": "^14.0.2",
+    "react-native-ble-plx": "^3.5.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-native": "^0.72.8",
+    "typescript": "^5.3.3"
   }
 }
